# qjhart.geostreams

./: README.md
doc/: 2dq.tex  Makefile  geostreams.bib  geostreams.sty
doc/hart04cikm/: dct.fig  hart04cikm.tex  interval.dia  interval.fig  move.fig
doc/hart04stdbm/: background.tex  dct.fig  hart04stdbm.bbl  hart04stdbm.tex  intro.tex  move.fig
doc/hart04vldb/: hart04vldb.tex
perl/DCT/: MANIFEST  Makefile.PL  README  dct.pl  tm-regions
perl/DCT/lib/: DCT.pm  Region.pm
perl/Geostr/: Changes  MANIFEST  META.yml  Makefile.PL  README
perl/Geostr/lib/: GeoStr.pm  Gvar.pm
perl/Geostr/t/: block0.gvr  geostr.t  gvar.t
perl/Gvar/: ELUG.c  Gvar.xs  MANIFEST  META.yml  Makefile.PL  block0.gvr  r.extract.gvar  r.in.vik  test.pl  typemap
perl/Gvar/lib/: Grass.pm  Gvar.pm
src/ELUG/: .project  ChangeLog  README
src/ELUG/etc/: ELUG_AND_TEST.P  ELUG_C.c  ELUG_C.h  ELUG_haiyantest.c  OBTAINED_RESULTS.txt  goesct3.c  goesct3.h  haiyantest.c  similartest.c  tmp.c
src/ELUG/src/: ELUG.cpp  ELUG.h  ELUG_C.c  ELUG_C.h  Makefile  test4time.cpp  testCplus.cpp  testOne.cpp
src/dct/segment-tree/: SegmentTreeTest.cpp  makefile  readme
src/dct/skip_list/: CascadeNode.h  DynamicCascadeTree.h  Point.h  RandomHeight.cpp  RandomHeight.h  Region.h  SkipList.h  SkipNode.h  dctPointQueryTest.cpp  dctWindowQueryTest.cpp  makefile
src/dct/spatial_index/: DCT.h  Node.h  dctQuery.cc  makefile
src/dct/util/: FileReader.cpp
src/geostreamd/: AUTHORS  ChangeLog  Connection.cpp  Connection.h  GeostreamServer.cpp  GeostreamServer.h  GeostreamServerConfig.h  GvarStream.cpp  GvarStream.h  HttpRequest.cpp  HttpRequest.h  HttpRequestBuffer.cpp  HttpRequestBuffer.h  Log.cpp  Log.h  Makefile.am  NOTES  README  TODO  bootstrap  buffer.cpp  client.c.nocache  config.cpp  configure.in  fifo.h  fifo_test.cpp  geostreamd.conf  geostreamd.cpp  geostreamd.h  rfc2616.txt
src/geostreamd/config/: dotconf.m4
src/geostreamd/lib/: Exception.h  List_MT.cpp  List_MT.h  Makefile.am  RWLock.cpp  RWLock.h  Socket.cpp  Socket.h
src/gvar/: Depend  Makefile  geo_mng.cpp  goesd.cpp  goesd.h  gvnetapi.cpp  gvnetapi.h
src/gvar/analysis/: pointset.cpp  pointset.h
src/gvar/block0/: block0.cpp  block0.h  block0Doc.cpp  block0Doc.h
src/gvar/block1to10/: block1to10.cpp  block1to10.h
src/gvar/geostreamd/: Makefile.old  buffer.c  cache.c  client.c  client.c.nocache  config.c  geostreamd.c  geostreamd.conf  geostreamd.h  geostreamd.pod  ll.c  log.c  request.c  rwlock.c  rwlock.h  server.c  uri.h
src/gvar/gvarBlock/: gvarBlock.cpp  gvarBlock.h
src/gvar/gvarHeader/: gvarHeader.cpp  gvarHeader.h
src/gvar/image/: image.h  image_listofimages.cpp  image_listofimages.h  imageatt.cpp  point_xy.cpp  point_xy.h  pointset_xyatt.cpp
src/gvar/lineDoc/: SpaceCraftIDText.h  lineDoc.cpp  lineDoc.h
src/gvar/mngstream/: DEVNOTES.txt  Makefile  MngStream.cpp  MngStream.h  README.txt  TODO.txt  applet.php  build.xml  control.php  cronjob3h  goes.php  goes2.php  index.php  killall.php  last.php  mng.php  mngcmp.pl  pgms2mng.cc  pngs2mng.cc  ps.php  redim.php  run  test.php
src/gvar_module/: Fifo.h  GrassWriter.cpp  GrassWriter.h  GvarConverter.cpp  GvarConverter.h  GvarStream.cpp  GvarStream.h  INSTALL  Makefile  README  README-mod_geostream.txt  README-retrieve_elug_params.txt  ShmRowFifo.cpp  ShmRowFifo.h  convert_gvar.cpp  convert_gvar_shm.cpp  create_grass_files.cpp  mod_geostream.cpp  retrieve_elug_params.cpp
src/gvar_module/grass/: GrassWriterUsingLib.cpp  GrassWriterUsingLib.h  Makefile  README.txt  grasswriter.cpp  make_mapset.c  setenv.sh
src/gvar_module/image/: Makefile  image_listofimages.cpp  imageatt.cpp  imageatt.h  (+6 more)
src/imgstr/: ChangeLog  README
src/libgvar/: Block.cpp  Block.h  Block0.cpp  Block0Doc.cpp  Block0Doc.h  Block1or2.cpp  Block3to10.cpp  ChangeLog  Header.cpp  LineDoc.cpp  LineDoc.h  Makefile.am  README  SourceChannelIDText.h  bootstrap  cdaTime.cpp  cdaTime.h  configure.in  frameCheck.h  gvar.h  recindex.c  selFloat.h  types.h  unpack10.cpp
src/viewer/: .classpath  .cvsignore  .project  BUILD.txt  DESIGN.txt  DEVNOTES.txt  TODO.txt  build.properties  build.xml  mksrcdist.sh
(+311 files in other folders)
